--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,14 @@
 # version: '3.8'
+
 services:
   app:
-    image: php:8.1-fpm
-    container_name: larave_john
-    working_dir: /var/www
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .:/var/www
-    networks:
-      - laravel
-
-  web:
-    image: nginx:alpine
-    container_name: laravel_web
-    volumes:
-      - .:/var/www
-      - ./docker/nginx:/etc/nginx/conf.d
+    working_dir: /var/www/laravel
     ports:
-      - "8000:80"
-    networks:
-      - laravel
-    depends_on:
-      - app
-
-  db:
-    image: mysql:8.0
-    container_name: laravel_db
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-    ports:
-      - "3306:3306"
-    networks:
-      - laravel
-
-networks:
-  laravel:
-    driver: bridge
+      - "8000:8000"
+    command: php artisan serve --host=0.0.0.0 --port=8000
 
