add: migrate_ok

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@
 services:
   db:
     image: mysql:5.7.36
-    container_name: "mysql_test"
+    container_name: "mysql_db"
     environment:
         MYSQL_ROOT_PASSWORD: root
-        MYSQL_DATABASE: mysql_db
+        MYSQL_DATABASE: mysql_john_db
         MYSQL_USER: admin
         MYSQL_PASSWORD: admin
         TZ: 'Asia/Tokyo'
@@ -23,6 +23,7 @@ services:
   php:
     build: ./docker/php
     container_name: "php-fpm"
+
     # ボリュームを設定する（ホスト側ディレクトリ:コンテナ側ボリュームの場所）
     volumes:
       - ./src:/var/www
